--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@heroicons/react": "2.0.18",
     "@material-tailwind/react": "2.1.4",
+    "@pushprotocol/restapi": "^1.4.45",
     "@safe-global/auth-kit": "^2.0.0",
     "@web3auth/safeauth-embed": "^0.0.0",
     "apexcharts": "3.44.0",
-    "ethers": "^6.9.0",
+    "dotenv": "^16.3.1",
+    "ethers": "^5.6.8",
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-apexcharts": "1.4.1",
